# vRATLS

./: .gitignore  .gitmodules  Makefile.coq.conf  Practice.v  README.md  _CoqProject  dune  dune-project  flake.nix
.github/workflows/: build.yml
_build/: .db  .digest-db  log
_build/default/theories/examples/: Conversions.v  Sig_Prot.v  Signature.v
_build/default/theories/extructurespp/: ord.v
playground/: SigmaProtocolExplained.v  example.v
rust/keygen/: Cargo.toml
rust/keygen/proofs/coq/extraction/: Keygen-coq.v  Keygen.v
rust/keygen/proofs/ssprove/extraction/: Keygen-new-struct.v  Keygen-old.v
rust/keygen/src/: main.rs
theories/: dune
theories/examples/: Conversions.v  Hash.v  More_props.v  MyPractice.v  MySignature.v  RA-extensions.v  RA.v  RA_Facts.v  RA_Locations.v  RA_Prot.v  RA_Protocol.v  RAsample.v  RSA.v  Sig_Prot.v  SigmaProtocol.v  SigmaProtocolExplained.v  Signature.v  SimpleProt.v  Swap.v  ex_ufg.v  example.v  sig.v  test_hax_to_ssprove.v
theories/extructurespp/: fmap.v  fset.v  ord.v
theories/old_files/: RA_old_hash.v
usenix/: main.aux  main.bib  main.blg
